--- a/themes/gauge_theme/static/css/getting_started.css
+++ b/themes/gauge_theme/static/css/getting_started.css
@@ -563,9 +563,17 @@ span.installer-icon:before {
     .edit-page {
         display: none;
     }
+    #change-filter {
+        display: block;
+        position: absolute;
+        top: -28px;
+        right: 0px;
+        text-align: right;
+    }
 }
 
 @media (max-width:576px) {
+    
     #installation-selection .setup-selections {
         display: flex;
         flex-direction: column;
@@ -663,5 +671,16 @@ span.installer-icon:before {
 
     .sliding-docs-toc.docs-toc {
         padding-top: 30px;
+    }
+    
+    .edit-page {
+        display: none;
+    }
+    #change-filter {
+        display: block;
+        position: absolute;
+        top: -28px;
+        right: 0px;
+        text-align: right;
     }
 }
