--- a/themes/gauge_theme/static/css/theme.css
+++ b/themes/gauge_theme/static/css/theme.css
@@ -124,12 +124,13 @@ ul li {
   padding-left: 0px;
 }
 
-footer {
+footer { 
   grid-area: footer
 }
 
 .search-container {
   width: 90%;
+  position: relative;
 }
 
 #search {
@@ -448,11 +449,12 @@ body {
   background-image: url(../img/search.svg);
   padding: 5px 5px 5px 29px;
   background-repeat: no-repeat;
-  position: relative;
-  top: 41px;
+  position: absolute;
+  top: 14px;
   z-index: 1;
   background-size: 14px;
-  left: 37px;
+  left: 35px;
+  height: 16px;
 }
 
 .docs-toc a {
@@ -939,7 +941,7 @@ ul.breadcrumbs li a {
 
 .navbtn {
   position: absolute;
-  top: 148px;
+  top: 123px;
   right: 20px;
   margin: auto;
   width: 20px;
@@ -1489,6 +1491,10 @@ img {
   padding-left: 0px;
 }
 
+.fixed-docs-toc .doc-toc-group.expanded>a:after {
+  display: none;
+}
+
 @media (min-width:576px) {
   .feature-desc {
     min-height: auto;
@@ -1708,6 +1714,7 @@ img {
   .right-sidebar-container {
     padding-top: 20px;
   }
+  
 }
 
 @media (min-width: 860px) {
@@ -1753,6 +1760,8 @@ img {
   }
   .side-nav-header {
     border-bottom: 1px solid #ccc;
+    padding-bottom: 22px;
+    margin-top: 22px;
   }
   
   .localtoc-container > ul {
